added-dashboard-ui

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -229,7 +229,18 @@ left: 8px;             /* leave room for thumb radius */
   border-width: 0 0 2px 0;
 }
 
-/* Rotation de l'icône chevron quand le dropdown est ouvert */
-div:has(#products-dropdown:checked) #products-chevron {
-  transform: rotate(90deg);
+
+.scroll-bar::-webkit-scrollbar {
+  width: 2px;
+}
+
+.scroll-bar::-webkit-scrollbar-track {
+  background: #d1d5db;
+}
+
+.scroll-bar::-webkit-scrollbar-thumb {
+  background: black;
+  border-radius: 0;
+  border: none;
+  min-width: 2px;
 }
